--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "tienda",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://LeanDoliri.github.io",
+  "homepage": "https://LeanDoliri.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "and": "^0.0.3",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
