--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "tienda",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://leandoliri.github.io/REACT-JS_LeandroDoliri/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "and": "^0.0.3",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.6",
     "react": "^17.0.2",
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -42,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
